compiler/testData/diagnostics/tests/operatorsOverloading/until/simple.kt
// !LANGUAGE: +RangeUntilOperator

fun main(n: Int) {
    for (i in 0<!UNRESOLVED_REFERENCE!>..<<!>n) {

    }
}